even better, iteratively replace

--- a/starter.ipynb
+++ b/starter.ipynb
@@ -820,7 +820,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 42,
    "id": "acaab9e3",
    "metadata": {},
    "outputs": [
@@ -872,6 +872,23 @@
     "            out.append(tok.text_with_ws)\n",
     "    return \"\".join(out)\n",
     "\n",
+    "# replace first x nouns\n",
+    "def attack_replace_x_nouns(caption: str, replace_word = \"\", x: int = 1) -> str:\n",
+    "    doc = nlp(caption)\n",
+    "    out = []\n",
+    "    replaced_count = 0\n",
+    "    for tok in doc:\n",
+    "        if tok.tag_ in NOUN_TAGS and replaced_count < x:\n",
+    "            word = replace_word\n",
+    "            if word != \"\":\n",
+    "                word = _maybe_pluralize(replace_word, tok.tag_)\n",
+    "                word = _match_casing(tok.text, word)\n",
+    "            out.append(word + tok.whitespace_)\n",
+    "            replaced_count += 1\n",
+    "        else:\n",
+    "            out.append(tok.text_with_ws)\n",
+    "    return \"\".join(out)\n",
+    "\n",
     "# examples\n",
     "print(attack_replace_nouns(\"A small dog runs across the field.\"))\n",
     "# -> \"A small cat runs across the cat.\"\n",
@@ -882,12 +899,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 43,
    "id": "7b2b8f56",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def caption_attack(original_caption: str, image: np.ndarray, orginal_label) -> str:\n",
+    "def caption_attack(original_caption: str, image: np.ndarray, orginal_label, api) -> str:\n",
     "    \n",
     "    image_tensor = preprocess(Image.fromarray(image)).unsqueeze(0).to(device)\n",
     "    image_features = model.encode_image(image_tensor)\n",
@@ -906,14 +923,18 @@
     "            best_noun = noun\n",
     "    #print(f\"Best noun to add: {best_noun} with similarity {best_sim}\")\n",
     "\n",
-    "    final_caption = attack_replace_nouns(original_caption, best_noun)\n",
+    "    for replacements in range(1,len(original_caption.split(\" \"))):\n",
+    "        final_caption = attack_replace_x_nouns(original_caption, best_noun, x=replacements)\n",
+    "        new_score = api.score(image, final_caption)\n",
+    "        if (new_score <= 0.5 and orginal_label == True) or (new_score > 0.5 and orginal_label == False):\n",
+    "            break\n",
     "\n",
     "    return final_caption"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "id": "088675d7",
    "metadata": {},
    "outputs": [
@@ -927,8 +948,8 @@
       "\n",
       "Testing attack function...\n",
       "Original caption: A gold bus traveling on a single lane road\n",
-      "Original score: 0.7508, Original label: True\n",
-      "Final score: 0.3900 Final caption: A boyhood boyhood traveling on a single boyhood boyhood\n",
+      "Original score: 0.7744, Original label: True\n",
+      "Final score: 0.4742 Final caption: A sectional sectional traveling on a single sectional sectional\n",
       "Attack success: True\n"
      ]
     }
@@ -991,7 +1012,7 @@
     "\n",
     "    #final_image = image_attack(original_image, original_caption, original_label, pixels_changed=100, epsilon=2, steps=15)        # Comment out this line when implementing image attacks\n",
     "    final_image = original_image  # Placeholder: No image attack implemented yet\n",
-    "    final_caption = caption_attack(original_caption, original_image, original_label)    # Comment out this line when implementing text attacks\n",
+    "    final_caption = caption_attack(original_caption, original_image, original_label, api)    # Comment out this line when implementing text attacks\n",
     "    #final_caption = attack_replace_nouns(original_caption)\n",
     "    #final_caption = attack_replace_adjectives(original_caption)\n",
     "    # Get final score  \n",
@@ -1046,7 +1067,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 45,
    "id": "f7a10633",
    "metadata": {},
    "outputs": [
@@ -1064,41 +1085,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Attacking:  26%|██▌       | 13/50 [00:13<00:37,  1.00s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Sample 12: Budget violation!\n",
-      "   Tokens: 14/10\n",
-      "   Pixels: 0/100\n",
-      "   Queries: 2/100\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Attacking:  74%|███████▍  | 37/50 [00:36<00:12,  1.00it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Sample 36: Budget violation!\n",
-      "   Tokens: 14/10\n",
-      "   Pixels: 0/100\n",
-      "   Queries: 2/100\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Attacking: 100%|██████████| 50/50 [00:50<00:00,  1.00s/it]"
+      "Attacking: 100%|██████████| 50/50 [00:52<00:00,  1.04s/it]"
      ]
     },
     {
@@ -1108,15 +1095,15 @@
       "\n",
       "EVALUATION RESULTS (50 samples):\n",
       "==================================================\n",
-      "Attack Success Rate (ASR): 88.0%\n",
-      "Average Number of Changes (ANC): 56.60\n",
-      "Average Queries (AQ): 2.0\n",
-      "Final Score: 0.7365\n",
+      "Attack Success Rate (ASR): 86.0%\n",
+      "Average Number of Changes (ANC): 30.00\n",
+      "Average Queries (AQ): 4.5\n",
+      "Final Score: 0.7805\n",
       "==================================================\n",
       "Budget Usage:\n",
-      "  Avg Token Cost: 5.66/10\n",
+      "  Avg Token Cost: 3.00/10\n",
       "  Avg Pixel Cost: 0.00/100\n",
-      "  Avg Query Cost: 2.0/100\n"
+      "  Avg Query Cost: 4.5/100\n"
      ]
     },
     {
