Removed redundant query, noticed random preprocess influences if the caption is succefuld or not

--- a/starter.ipynb
+++ b/starter.ipynb
@@ -899,7 +899,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 47,
    "id": "7b2b8f56",
    "metadata": {},
    "outputs": [],
@@ -928,13 +928,13 @@
     "        new_score = api.score(image, final_caption)\n",
     "        if (new_score <= 0.5 and orginal_label == True) or (new_score > 0.5 and orginal_label == False):\n",
     "            break\n",
-    "\n",
-    "    return final_caption"
+    "    final_score = new_score\n",
+    "    return final_caption, final_score"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 48,
    "id": "088675d7",
    "metadata": {},
    "outputs": [
@@ -948,8 +948,8 @@
       "\n",
       "Testing attack function...\n",
       "Original caption: A gold bus traveling on a single lane road\n",
-      "Original score: 0.7744, Original label: True\n",
-      "Final score: 0.4742 Final caption: A sectional sectional traveling on a single sectional sectional\n",
+      "Original score: 0.7833, Original label: True\n",
+      "Final score: 0.4797 Final caption: A boyhood boyhood traveling on a single lane road\n",
       "Attack success: True\n"
      ]
     }
@@ -1008,15 +1008,10 @@
     "    # - Multimodal: Combined text+image attacks for maximum effectiveness\n",
     "\n",
     "    original_label = original_score > 0.5\n",
-    "    \n",
-    "\n",
-    "    #final_image = image_attack(original_image, original_caption, original_label, pixels_changed=100, epsilon=2, steps=15)        # Comment out this line when implementing image attacks\n",
     "    final_image = original_image  # Placeholder: No image attack implemented yet\n",
-    "    final_caption = caption_attack(original_caption, original_image, original_label, api)    # Comment out this line when implementing text attacks\n",
-    "    #final_caption = attack_replace_nouns(original_caption)\n",
-    "    #final_caption = attack_replace_adjectives(original_caption)\n",
-    "    # Get final score  \n",
-    "    final_score = api.score(final_image, final_caption)\n",
+    "    final_caption, final_score = caption_attack(original_caption, original_image, original_label, api)    # Comment out this line when implementing text attacks\n",
+    "\n",
+    "\n",
     "    if verbose:\n",
     "        print(f\"Original caption: {original_caption}\")\n",
     "        print(f\"Original score: {original_score:.4f}, Original label: {original_label}\")\n",
@@ -1067,7 +1062,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 49,
    "id": "f7a10633",
    "metadata": {},
    "outputs": [
@@ -1085,7 +1080,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Attacking: 100%|██████████| 50/50 [00:52<00:00,  1.04s/it]"
+      "Attacking: 100%|██████████| 50/50 [00:50<00:00,  1.01s/it]"
      ]
     },
     {
@@ -1095,15 +1090,15 @@
       "\n",
       "EVALUATION RESULTS (50 samples):\n",
       "==================================================\n",
-      "Attack Success Rate (ASR): 86.0%\n",
-      "Average Number of Changes (ANC): 30.00\n",
-      "Average Queries (AQ): 4.5\n",
-      "Final Score: 0.7805\n",
+      "Attack Success Rate (ASR): 94.0%\n",
+      "Average Number of Changes (ANC): 30.20\n",
+      "Average Queries (AQ): 3.4\n",
+      "Final Score: 0.8611\n",
       "==================================================\n",
       "Budget Usage:\n",
-      "  Avg Token Cost: 3.00/10\n",
+      "  Avg Token Cost: 3.02/10\n",
       "  Avg Pixel Cost: 0.00/100\n",
-      "  Avg Query Cost: 4.5/100\n"
+      "  Avg Query Cost: 3.4/100\n"
      ]
     },
     {
@@ -1249,7 +1244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
    "id": "9a906503",
    "metadata": {},
    "outputs": [
@@ -1267,640 +1262,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Attacking:   6%|▌         | 56/1000 [00:57<16:23,  1.04s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Sample 55: Budget violation!\n",
-      "   Tokens: 16/10\n",
-      "   Pixels: 0/100\n",
-      "   Queries: 6/100\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Attacking:   8%|▊         | 77/1000 [01:19<15:59,  1.04s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Sample 76: Budget violation!\n",
-      "   Tokens: 12/10\n",
-      "   Pixels: 0/100\n",
-      "   Queries: 6/100\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Attacking:   8%|▊         | 82/1000 [01:24<15:49,  1.03s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Sample 81: Budget violation!\n",
-      "   Tokens: 12/10\n",
-      "   Pixels: 0/100\n",
-      "   Queries: 5/100\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Attacking:  14%|█▍        | 138/1000 [02:22<14:52,  1.04s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Sample 137: Budget violation!\n",
-      "   Tokens: 12/10\n",
-      "   Pixels: 0/100\n",
-      "   Queries: 5/100\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Attacking:  15%|█▍        | 147/1000 [02:31<14:57,  1.05s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Sample 146: Budget violation!\n",
-      "   Tokens: 14/10\n",
-      "   Pixels: 0/100\n",
-      "   Queries: 5/100\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Attacking:  15%|█▌        | 152/1000 [02:37<16:25,  1.16s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Sample 151: Budget violation!\n",
-      "   Tokens: 15/10\n",
-      "   Pixels: 0/100\n",
-      "   Queries: 21/100\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Attacking:  15%|█▌        | 153/1000 [02:38<16:31,  1.17s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Sample 152: Budget violation!\n",
-      "   Tokens: 12/10\n",
-      "   Pixels: 0/100\n",
-      "   Queries: 10/100\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Attacking:  18%|█▊        | 177/1000 [03:03<14:10,  1.03s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Sample 176: Budget violation!\n",
-      "   Tokens: 12/10\n",
-      "   Pixels: 0/100\n",
-      "   Queries: 5/100\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Attacking:  18%|█▊        | 182/1000 [03:08<14:03,  1.03s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Sample 181: Budget violation!\n",
-      "   Tokens: 16/10\n",
-      "   Pixels: 0/100\n",
-      "   Queries: 6/100\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Attacking:  19%|█▊        | 187/1000 [03:13<13:51,  1.02s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Sample 186: Budget violation!\n",
-      "   Tokens: 12/10\n",
-      "   Pixels: 0/100\n",
-      "   Queries: 6/100\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Attacking:  19%|█▉        | 189/1000 [03:15<14:01,  1.04s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Sample 188: Budget violation!\n",
-      "   Tokens: 13/10\n",
-      "   Pixels: 0/100\n",
-      "   Queries: 5/100\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Attacking:  27%|██▋       | 270/1000 [04:38<12:52,  1.06s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Sample 269: Budget violation!\n",
-      "   Tokens: 12/10\n",
-      "   Pixels: 0/100\n",
-      "   Queries: 5/100\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Attacking:  28%|██▊       | 283/1000 [04:52<12:45,  1.07s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Sample 282: Budget violation!\n",
-      "   Tokens: 26/10\n",
-      "   Pixels: 0/100\n",
-      "   Queries: 8/100\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Attacking:  31%|███       | 306/1000 [05:16<12:35,  1.09s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Sample 305: Budget violation!\n",
-      "   Tokens: 15/10\n",
-      "   Pixels: 0/100\n",
-      "   Queries: 7/100\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Attacking:  32%|███▏      | 319/1000 [05:29<11:38,  1.03s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Sample 318: Budget violation!\n",
-      "   Tokens: 16/10\n",
-      "   Pixels: 0/100\n",
-      "   Queries: 6/100\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Attacking:  34%|███▍      | 340/1000 [05:51<11:19,  1.03s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Sample 339: Budget violation!\n",
-      "   Tokens: 16/10\n",
-      "   Pixels: 0/100\n",
-      "   Queries: 5/100\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Attacking:  40%|███▉      | 399/1000 [06:52<10:11,  1.02s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Sample 398: Budget violation!\n",
-      "   Tokens: 12/10\n",
-      "   Pixels: 0/100\n",
-      "   Queries: 5/100\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Attacking:  42%|████▏     | 418/1000 [07:11<10:10,  1.05s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Sample 417: Budget violation!\n",
-      "   Tokens: 12/10\n",
-      "   Pixels: 0/100\n",
-      "   Queries: 6/100\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Attacking:  43%|████▎     | 432/1000 [07:26<09:52,  1.04s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Sample 431: Budget violation!\n",
-      "   Tokens: 22/10\n",
-      "   Pixels: 0/100\n",
-      "   Queries: 6/100\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Attacking:  46%|████▌     | 461/1000 [07:56<09:24,  1.05s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Sample 460: Budget violation!\n",
-      "   Tokens: 12/10\n",
-      "   Pixels: 0/100\n",
-      "   Queries: 5/100\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Attacking:  52%|█████▏    | 515/1000 [08:52<08:22,  1.04s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Sample 514: Budget violation!\n",
-      "   Tokens: 12/10\n",
-      "   Pixels: 0/100\n",
-      "   Queries: 6/100\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Attacking:  52%|█████▏    | 519/1000 [08:56<08:23,  1.05s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Sample 518: Budget violation!\n",
-      "   Tokens: 20/10\n",
-      "   Pixels: 0/100\n",
-      "   Queries: 7/100\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Attacking:  52%|█████▏    | 521/1000 [08:58<08:22,  1.05s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Sample 520: Budget violation!\n",
-      "   Tokens: 15/10\n",
-      "   Pixels: 0/100\n",
-      "   Queries: 7/100\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Attacking:  55%|█████▍    | 546/1000 [09:24<07:50,  1.04s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Sample 545: Budget violation!\n",
-      "   Tokens: 12/10\n",
-      "   Pixels: 0/100\n",
-      "   Queries: 6/100\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Attacking:  58%|█████▊    | 584/1000 [10:03<07:15,  1.05s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Sample 583: Budget violation!\n",
-      "   Tokens: 22/10\n",
-      "   Pixels: 0/100\n",
-      "   Queries: 6/100\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Attacking:  63%|██████▎   | 628/1000 [10:48<06:24,  1.03s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Sample 627: Budget violation!\n",
-      "   Tokens: 16/10\n",
-      "   Pixels: 0/100\n",
-      "   Queries: 6/100\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Attacking:  66%|██████▋   | 664/1000 [11:25<05:50,  1.04s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Sample 663: Budget violation!\n",
-      "   Tokens: 32/10\n",
-      "   Pixels: 0/100\n",
-      "   Queries: 8/100\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Attacking:  77%|███████▋  | 772/1000 [13:16<03:54,  1.03s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Sample 771: Budget violation!\n",
-      "   Tokens: 16/10\n",
-      "   Pixels: 0/100\n",
-      "   Queries: 5/100\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Attacking:  80%|███████▉  | 796/1000 [13:41<03:26,  1.01s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Sample 795: Budget violation!\n",
-      "   Tokens: 14/10\n",
-      "   Pixels: 0/100\n",
-      "   Queries: 5/100\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Attacking:  81%|████████  | 810/1000 [13:55<03:16,  1.04s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Sample 809: Budget violation!\n",
-      "   Tokens: 13/10\n",
-      "   Pixels: 0/100\n",
-      "   Queries: 8/100\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Attacking:  82%|████████▏ | 815/1000 [14:01<03:12,  1.04s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Sample 814: Budget violation!\n",
-      "   Tokens: 13/10\n",
-      "   Pixels: 0/100\n",
-      "   Queries: 7/100\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Attacking:  82%|████████▏ | 822/1000 [14:08<03:03,  1.03s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Sample 821: Budget violation!\n",
-      "   Tokens: 12/10\n",
-      "   Pixels: 0/100\n",
-      "   Queries: 6/100\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Attacking:  84%|████████▍ | 839/1000 [14:25<02:51,  1.06s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Sample 838: Budget violation!\n",
-      "   Tokens: 18/10\n",
-      "   Pixels: 0/100\n",
-      "   Queries: 8/100\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Attacking:  91%|█████████ | 907/1000 [15:35<01:37,  1.05s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Sample 906: Budget violation!\n",
-      "   Tokens: 12/10\n",
-      "   Pixels: 0/100\n",
-      "   Queries: 5/100\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Attacking:  96%|█████████▌| 961/1000 [16:32<00:39,  1.02s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Sample 960: Budget violation!\n",
-      "   Tokens: 14/10\n",
-      "   Pixels: 0/100\n",
-      "   Queries: 5/100\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Attacking:  98%|█████████▊| 980/1000 [16:51<00:21,  1.07s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Sample 979: Budget violation!\n",
-      "   Tokens: 12/10\n",
-      "   Pixels: 0/100\n",
-      "   Queries: 5/100\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Attacking: 100%|██████████| 1000/1000 [17:12<00:00,  1.03s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "FINAL EVALUATION RESULTS:\n",
-      "============================================================\n",
-      "Attack Success Rate (ASR): 89.1%\n",
-      "Average Number of Changes (ANC): 37.14\n",
-      "Average Queries (AQ): 4.4\n",
-      "Final Score: 0.7938\n",
-      "============================================================\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
+      "Attacking:   0%|          | 3/1000 [00:03<16:50,  1.01s/it]"
      ]
     }
    ],
