Final run on 1000 points without redundant query

--- a/starter.ipynb
+++ b/starter.ipynb
@@ -1061,6 +1061,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "73a7b71a",
+   "metadata": {},
+   "source": [
+    "The randomness of the preprocessing makes it so the final call should be the final returned score otherwise, you cant talk about if caption succecedes or not, but if it on average \"succedes\"."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 49,
    "id": "f7a10633",
@@ -1262,7 +1270,58 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Attacking:   0%|          | 3/1000 [00:03<16:50,  1.01s/it]"
+      "Attacking:   6%|▌         | 56/1000 [00:57<16:10,  1.03s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sample 55: Budget violation!\n",
+      "   Tokens: 12/10\n",
+      "   Pixels: 0/100\n",
+      "   Queries: 5/100\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Attacking:   8%|▊         | 77/1000 [01:19<15:57,  1.04s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sample 76: Budget violation!\n",
+      "   Tokens: 12/10\n",
+      "   Pixels: 0/100\n",
+      "   Queries: 5/100\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Attacking:   8%|▊         | 82/1000 [01:24<15:35,  1.02s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sample 81: Budget violation!\n",
+      "   Tokens: 12/10\n",
+      "   Pixels: 0/100\n",
+      "   Queries: 4/100\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Attacking:  14%|█▎        | 136/1000 [02:18<14:23,  1.00it/s]"
      ]
     }
    ],
