dont submit non-succeful runs

--- a/starter.ipynb
+++ b/starter.ipynb
@@ -693,7 +693,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 67,
+   "id": "e508e4fc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# complete_word_list = pd.read_csv(\"large_word_list.csv\", delimiter=\";\")\n",
+    "# # filter so only \"Dom_PoS_SUBTLEX = Noun is included\"\n",
+    "# nounlist = complete_word_list[complete_word_list[\"Dom_PoS_SUBTLEX\"] == \"Noun\"]\n",
+    "# nounlist.rename(columns={\"Word\":\"nouns\"}, inplace=True)\n",
+    "# nounlist = nounlist.dropna()\n",
+    "# with torch.no_grad():\n",
+    "#     nounlist['encoded'] = nounlist['nouns'].apply(encode_text)\n",
+    "# nounlist.to_pickle(\"large_encoded_nounlist.pkl\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
    "id": "8891480b",
    "metadata": {},
    "outputs": [
@@ -800,27 +817,33 @@
        "[6801 rows x 2 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# load nounlist.csv\n",
-    "nounlist = pd.read_csv('nounlist.csv', header=None)\n",
-    "nounlist.columns = ['nouns']\n",
-    "# delete all but a 300 rows\n",
-    "# nounlist = nounlist.head(300)\n",
+    "#check if small_encoded_nounlist.pkl exists\n",
+    "if os.path.exists(\"small_encoded_nounlist.pkl\"):\n",
+    "    # load nounlist.csv\n",
+    "    nounlist = pd.read_csv('nounlist.csv', header=None)\n",
+    "    nounlist.columns = ['nouns']\n",
+    "    # delete all but a 300 rows\n",
+    "    # nounlist = nounlist.head(300)\n",
     "\n",
-    "#apply function encode_text to each noun and put in new column\n",
-    "with torch.no_grad():\n",
-    "    nounlist['encoded'] = nounlist['nouns'].apply(encode_text)\n",
+    "    #apply function encode_text to each noun and put in new column\n",
+    "    with torch.no_grad():\n",
+    "        nounlist['encoded'] = nounlist['nouns'].apply(encode_text)\n",
+    "    nounlist.to_pickle(\"small_encoded_nounlist.pkl\")\n",
+    "else:\n",
+    "    print(\"Loading small_encoded_nounlist.pkl\")\n",
+    "    nounlist = pd.read_pickle(\"small_encoded_nounlist.pkl\")\n",
     "nounlist"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 70,
    "id": "acaab9e3",
    "metadata": {},
    "outputs": [
@@ -891,15 +914,14 @@
     "\n",
     "# examples\n",
     "print(attack_replace_nouns(\"A small dog runs across the field.\"))\n",
-    "# -> \"A small cat runs across the cat.\"\n",
     "print(attack_replace_nouns(\"John's red cars were parked in New York\"))\n",
     "print(attack_replace_nouns(\"A man standing in front of a refrigerator freezer.\"))\n",
-    "# -> \"Cat's red cats were parked in Cat Cat.\"\n"
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 101,
    "id": "7b2b8f56",
    "metadata": {},
    "outputs": [],
@@ -923,8 +945,61 @@
     "            best_noun = noun\n",
     "    #print(f\"Best noun to add: {best_noun} with similarity {best_sim}\")\n",
     "\n",
-    "    for replacements in range(1,len(original_caption.split(\" \"))):\n",
-    "        final_caption = attack_replace_x_nouns(original_caption, best_noun, x=replacements)\n",
+    "    for nr_replacements in range(1,len(original_caption.split(\" \"))):\n",
+    "        final_caption = attack_replace_x_nouns(original_caption, best_noun, x=nr_replacements)\n",
+    "        new_score = api.score(image, final_caption)\n",
+    "        if (new_score <= 0.5 and orginal_label == True) or (new_score > 0.5 and orginal_label == False):\n",
+    "            break\n",
+    "    final_score = new_score\n",
+    "\n",
+    "    return final_caption, final_score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "id": "d71c6c67",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "def caption_attack_priority(original_caption: str, image: np.ndarray, orginal_label, api) -> str:\n",
+    "    \n",
+    "    image_tensor = preprocess(Image.fromarray(image)).unsqueeze(0).to(device)\n",
+    "    image_features = model.encode_image(image_tensor)\n",
+    "\n",
+    "    if orginal_label == False:\n",
+    "        best_sim = -1\n",
+    "    else:\n",
+    "        best_sim = 1\n",
+    "    \n",
+    "    for index, row in nounlist.iterrows():\n",
+    "        #print(best_sim)\n",
+    "        noun = row['nouns']\n",
+    "        text_features = row['encoded']\n",
+    "        sim = calc_similarity(image_features.to(\"cpu\"), text_features.to(\"cpu\"))\n",
+    "        if (sim < best_sim and orginal_label == True) or (sim > best_sim and orginal_label == False):\n",
+    "            best_sim = sim\n",
+    "            best_noun = noun\n",
+    "    \n",
+    "    \n",
+    "    #get word priority:\n",
+    "    word_priority_list = []\n",
+    "    doc = nlp(original_caption)\n",
+    "    for tok, word in zip(doc,original_caption.split(\" \")):\n",
+    "        if tok.tag_ in NOUN_TAGS:\n",
+    "            word_features = encode_text(word)\n",
+    "            sim = calc_similarity(image_features.to(\"cpu\"), word_features.to(\"cpu\"))\n",
+    "            word_priority_list.append((word, sim))\n",
+    "\n",
+    "\n",
+    "    word_priority_list.sort(key=lambda x: x[1], reverse= not orginal_label)\n",
+    "    \n",
+    "    #print(f\"Best noun to add: {best_noun} with similarity {best_sim}\")\n",
+    "    final_caption = original_caption\n",
+    "    for nr_replacements in range(1,len(word_priority_list)):\n",
+    "        for i in range(nr_replacements):\n",
+    "            final_caption = final_caption.replace(word_priority_list[i][0], best_noun)\n",
     "        new_score = api.score(image, final_caption)\n",
     "        if (new_score <= 0.5 and orginal_label == True) or (new_score > 0.5 and orginal_label == False):\n",
     "            break\n",
@@ -934,7 +1009,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 116,
    "id": "088675d7",
    "metadata": {},
    "outputs": [
@@ -948,8 +1023,8 @@
       "\n",
       "Testing attack function...\n",
       "Original caption: A gold bus traveling on a single lane road\n",
-      "Original score: 0.7833, Original label: True\n",
-      "Final score: 0.4797 Final caption: A boyhood boyhood traveling on a single lane road\n",
+      "Original score: 0.7659, Original label: True\n",
+      "Final score: 0.4778 Final caption: A boyhood boyhood traveling on a single lane road\n",
       "Attack success: True\n"
      ]
     }
@@ -1010,7 +1085,7 @@
     "    original_label = original_score > 0.5\n",
     "    final_image = original_image  # Placeholder: No image attack implemented yet\n",
     "    final_caption, final_score = caption_attack(original_caption, original_image, original_label, api)    # Comment out this line when implementing text attacks\n",
-    "\n",
+    "    #final_caption, final_score = caption_attack_priority(original_caption, original_image, original_label, api)\n",
     "\n",
     "    if verbose:\n",
     "        print(f\"Original caption: {original_caption}\")\n",
@@ -1021,6 +1096,12 @@
     "    original_decision = original_score > 0.5\n",
     "    final_decision = final_score > 0.5\n",
     "    success = (original_decision != final_decision)\n",
+    "\n",
+    "    #No points in getting penalized when unsuccessful\n",
+    "    if not success or token_edit_cost(original_caption, final_caption) > budgets['T_MAX'] or pixel_edit_cost(original_image, final_image) > budgets['P_MAX'] or api.query_count > budgets['Q_MAX']:\n",
+    "        final_image = original_image\n",
+    "        final_caption = original_caption\n",
+    "        final_score = original_score\n",
     "    \n",
     "    # Calculate costs\n",
     "    token_cost = token_edit_cost(original_caption, final_caption)\n",
@@ -1070,7 +1151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 117,
    "id": "f7a10633",
    "metadata": {},
    "outputs": [
@@ -1088,7 +1169,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Attacking: 100%|██████████| 50/50 [00:50<00:00,  1.01s/it]"
+      "Attacking: 100%|██████████| 50/50 [00:51<00:00,  1.02s/it]"
      ]
     },
     {
@@ -1099,12 +1180,12 @@
       "EVALUATION RESULTS (50 samples):\n",
       "==================================================\n",
       "Attack Success Rate (ASR): 94.0%\n",
-      "Average Number of Changes (ANC): 30.20\n",
+      "Average Number of Changes (ANC): 25.60\n",
       "Average Queries (AQ): 3.4\n",
-      "Final Score: 0.8611\n",
+      "Final Score: 0.8726\n",
       "==================================================\n",
       "Budget Usage:\n",
-      "  Avg Token Cost: 3.02/10\n",
+      "  Avg Token Cost: 2.56/10\n",
       "  Avg Pixel Cost: 0.00/100\n",
       "  Avg Query Cost: 3.4/100\n"
      ]
@@ -1227,6 +1308,8 @@
     "\n",
     "# Evaluate on subset first (faster for testing)\n",
     "print(\"Running on first 50 samples for quick testing...\")\n",
+    "#set pytorch seed\n",
+    "torch.manual_seed(1)\n",
     "eval_result = evaluate_attack(\n",
     "    val_pairs=val_pairs, \n",
     "    attack_function=attack,\n",
@@ -1252,7 +1335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 118,
    "id": "9a906503",
    "metadata": {},
    "outputs": [
@@ -1270,58 +1353,28 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Attacking:   6%|▌         | 56/1000 [00:57<16:10,  1.03s/it]"
+      "Attacking: 100%|██████████| 1000/1000 [17:05<00:00,  1.03s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sample 55: Budget violation!\n",
-      "   Tokens: 12/10\n",
-      "   Pixels: 0/100\n",
-      "   Queries: 5/100\n"
+      "\n",
+      "FINAL EVALUATION RESULTS:\n",
+      "============================================================\n",
+      "Attack Success Rate (ASR): 94.5%\n",
+      "Average Number of Changes (ANC): 29.05\n",
+      "Average Queries (AQ): 3.4\n",
+      "Final Score: 0.8690\n",
+      "============================================================\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Attacking:   8%|▊         | 77/1000 [01:19<15:57,  1.04s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Sample 76: Budget violation!\n",
-      "   Tokens: 12/10\n",
-      "   Pixels: 0/100\n",
-      "   Queries: 5/100\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Attacking:   8%|▊         | 82/1000 [01:24<15:35,  1.02s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Sample 81: Budget violation!\n",
-      "   Tokens: 12/10\n",
-      "   Pixels: 0/100\n",
-      "   Queries: 4/100\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Attacking:  14%|█▎        | 136/1000 [02:18<14:23,  1.00it/s]"
+      "\n"
      ]
     }
    ],
